
   o Temperature factor variance validation now works for SHELXL
     molecules [GMS, JED]

   o Ca Zone->Mainchain no longer spews warnings

   o Planar peptide restraints are ON by default now [Phil Evans]

   o Omega Distortion graph now updates on Accept Refine Zone

   o CCP4i aliases are also added to the Project Dir options in the
     file selector

   o Fix typo in transform-map-using-lsq-matrix [Nick Furnham]


    -------------------------------------------------------
    -------------------- Old Releases ---------------------
    -------------------------------------------------------


Release 0.3.3 "The Early Bird Catches the Bugs"

  o Tortuous and seemingly broken "Display Frame" code reverted [RR
    will be back to being nausiated]

  o Filter button fixed for file selections

---

Release 0.3.2 "Don't Bet on the River"

  o Fix crash due to rigid body refinement of atoms with zero
    occupancy

  o Add further SHELX support: .res files are split and unsplit on
    reading/writing.  Solve the ^M problem like SHELX does. SHELXL
    refinement interface improved [GMS]

  o Fix crash when applying NCS edits [Michael Url]

  o Fix problems of incorrect actions on pressing NCS buttons 
    [Christopher Rife]

  o Fix (potential?) crash on finding blobs and waters [Kevin Cowtan]

  o Fix crash apparent after deleting all maps then reading a new one 
    while the Display Control window was open

  o Instabity problems due to 60+ molecules addressed [but difficult
    to test thoroughly]

  o Added CNS map-reading [provided by Kevin Cowtan]. ".cns" is now 
    an acceptable map extension

  o Add Terminal Residue for nucleotide polymers

  o Alt confs of ligands no longer fly apart on regularization

  o Ramachandran plots now tell us the Preferred/Allowed/Outlier stats

  o Add user-settable contour levels and block size for Ramachandran plots

  o GTk+-2 interface now usable

  o Added SEGID info to clicked atom [Christine Durnham]
